--- a/ionic_project/Toilettes/src/pages/add/add.html
+++ b/ionic_project/Toilettes/src/pages/add/add.html
@@ -1,11 +1,11 @@
 <ion-header>
   <ion-navbar>
     <ion-title>
-      À propos
+      Ajouter des toilettes
     </ion-title>
   </ion-navbar>
 </ion-header>
 
-<ion-content padding>
+<ion-content>
 
 </ion-content>
