--- a/ionic_project/Toilettes/src/pages/add/add.html
+++ b/ionic_project/Toilettes/src/pages/add/add.html
@@ -3,9 +3,81 @@
     <ion-title>
       Ajouter des toilettes
     </ion-title>
+    <ion-buttons end>
+      <button ion-button icon-only>
+        Ajouter
+        <ion-icon name="add"></ion-icon>
+      </button>
+    </ion-buttons>
   </ion-navbar>
 </ion-header>
 
 <ion-content>
+
+ 
+
+  <ion-item-group>
+    <ion-item-divider color="light">Détails</ion-item-divider>
+    <ion-item>
+      <ion-label> Gratuit</ion-label>
+      <ion-toggle checked="false" [(ngModel)]="free" (ionChange)="action($event)"></ion-toggle>
+    </ion-item>
+    <ion-item>
+      <ion-label> Accessible</ion-label>
+      <ion-toggle checked="false" [(ngModel)]="access" (ionChange)="action($event)"></ion-toggle>
+    </ion-item>
+
+
+    <ion-grid>
+      <ion-row>
+        <ion-col col-8 class="note">
+          Note
+        </ion-col>
+        <ion-col col-4>
+          <rating [(ngModel)]="rate" 
+            readOnly="false"
+            max="5"
+            emptyStarIconName="star-outline"
+            halfStarIconName="star-half"
+            starIconName="star"
+            nullable="false"
+            (ngModelChange)="action($event)"
+          ></rating>
+        </ion-col>
+      </ion-row>
+    </ion-grid>
+
+    <ion-item-divider color="light">Type de toilettes</ion-item-divider>
+    <ion-list radio-group [(ngModel)]="type" (ngModelChange)="action($event)">
+      <ion-item>
+        <ion-label>Restaurant</ion-label>
+        <ion-radio value="restaurant"></ion-radio>
+      </ion-item>
+
+      <ion-item>
+        <ion-label>Publiques</ion-label>
+        <ion-radio value="public"></ion-radio>
+      </ion-item>
+
+      <ion-item>
+        <ion-label>Centre commercial</ion-label>
+        <ion-radio  value="shopingCenter" ></ion-radio>
+      </ion-item>
+
+      <ion-item>
+        <ion-label>Station carburant</ion-label>
+        <ion-radio value="gasStation" ></ion-radio>
+      </ion-item>
+
+      <ion-item>
+        <ion-label>Bar</ion-label>
+        <ion-radio value="pub" ></ion-radio>
+      </ion-item>
+    </ion-list>
+
+
+
+  </ion-item-group>
+
 
 </ion-content>
