Fix note styles (text-align)

--- a/ionic_project/Toilettes/src/pages/add/add.html
+++ b/ionic_project/Toilettes/src/pages/add/add.html
@@ -30,10 +30,10 @@
 
     <ion-grid>
       <ion-row>
-        <ion-col col-8 class="note">
+        <ion-col class="noteLabel">
           Note
         </ion-col>
-        <ion-col col-4>
+        <ion-col class="note">
           <rating [(ngModel)]="rate" 
             readOnly="false"
             max="5"
@@ -74,6 +74,9 @@
         <ion-radio value="pub" ></ion-radio>
       </ion-item>
     </ion-list>
+
+
+
 
 
 
