Add account popover page and put function in data service

--- a/ionic_project/Toilettes/src/pages/about/about.html
+++ b/ionic_project/Toilettes/src/pages/about/about.html
@@ -4,11 +4,8 @@
       À propos
     </ion-title>
     <ion-buttons end>
-      <button ion-button icon-only (click)="logout()" *ngIf="getToken() != null">
-        Se déconnecter
-      </button>
-      <button ion-button icon-only (click)="login()" *ngIf="getToken() == null">
-        Se connecter
+      <button ion-button icon-only (click)="account($event)">
+        <ion-icon name="contact"></ion-icon>
       </button>
 
 
